@@ -466,6 +466,34 @@ CREATE TABLE `loginlog` (
 ) TYPE=MyISAM;
 
 --
+-- Table structure for table `mail`
+--
+
+DROP TABLE IF EXISTS `mail`;
+CREATE TABLE `mail` (
+  `id` bigint(20) unsigned NOT NULL auto_increment,
+  `send_name` varchar(30) NOT NULL default '',
+  `send_id` int(11) unsigned NOT NULL default '0',
+  `dest_name` varchar(30) NOT NULL default '',
+  `dest_id` int(11) unsigned NOT NULL default '0',
+  `title` varchar(45) NOT NULL default '',
+  `message` varchar(255) NOT NULL default '',
+  `time` int(11) unsigned NOT NULL default '0',
+  `read_flag` tinyint(1) unsigned NOT NULL default '0',
+  `zeny` int(11) unsigned NOT NULL default '0',
+  `nameid` int(11) unsigned NOT NULL default '0',
+  `amount` int(11) unsigned NOT NULL default '0',
+  `refine` tinyint(3) unsigned NOT NULL default '0',
+  `attribute` tinyint(4) unsigned NOT NULL default '0',
+  `identify` smallint(6) NOT NULL default '0',
+  `card0` smallint(11) NOT NULL default '0',
+  `card1` smallint(11) NOT NULL default '0',
+  `card2` smallint(11) NOT NULL default '0',
+  `card3` smallint(11) NOT NULL default '0',
+  PRIMARY KEY  (`id`)
+) ENGINE=MyISAM;
+
+--
 -- Table structure for table `memo`
 --
 
